unpackaged/main/default/objects/Activity/fields/ADC_Ready__c.field-meta.xml
<CustomField>
    <fullName>ADC_Ready__c</fullName>
    <formula>inspire1__Inspire_Task__r.ADC_Ready__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADC Ready</label>
    <type>Checkbox</type>
</CustomField>