unpackaged/main/default/objects/Activity/fields/Call_Duration_min__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_min__c</fullName>
    <description>Call Duration in Minutes</description>
    <formula>CallDurationInSeconds / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration (min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>