unpackaged/main/default/objects/Activity/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Power of One</description>
    <label>Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>