unpackaged/main/default/objects/Activity/fields/Creator_Profile__c.field-meta.xml
<CustomField>
    <fullName>Creator_Profile__c</fullName>
    <description>Task Creator Profile. Used for Reporting purposes.</description>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Profile</label>
    <type>Text</type>
</CustomField>