unpackaged/main/default/objects/Activity/fields/Launch__c.field-meta.xml
<CustomField>
    <fullName>Launch__c</fullName>
    <description>Launch Name of the Product Launch Task</description>
    <label>Launch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>