unpackaged/main/default/objects/Activity/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <description>RowNumber of the Inspire Planner Task</description>
    <formula>inspire1__Inspire_Task__r.inspire1__RowNumber__c</formula>
    <label>Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>