unpackaged/main/default/objects/Activity/fields/Send_Ready_to_Start_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Ready_to_Start_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Ready to Start Email</label>
    <type>Checkbox</type>
</CustomField>