unpackaged/main/default/objects/Activity/fields/Task_Comments_for_Assignee_Only__c.field-meta.xml
<CustomField>
    <fullName>Task_Comments_for_Assignee_Only__c</fullName>
    <description>Task Comments for Project Tasks by Assignee</description>
    <label>Task Comments for Assignee Only</label>
    <type>TextArea</type>
</CustomField>